commit for build

--- a/sources/catalog/resources/view.html
+++ b/sources/catalog/resources/view.html
@@ -26,7 +26,7 @@
 		</el-table-column>
 		<el-table-column label="更新时间" width="20%">
 		<template scope="scope">
-		{{ scope.row.update_time | formatDate }}
+		{{ scope.row.update_time }}
 		</template>
 		</el-table-column>
 		</el-table>
