--- a/sources/index.html
+++ b/sources/index.html
@@ -16,11 +16,11 @@
   <script>
     (function (window) {
       window.url = {
-          //  master: "http://172.16.8.84:8080/sharaportal"
-        // master: "http://172.16.8.69:8080/sharaportal"
-        //  master: "http://192.168.13.73:8080/sharaportal"
+         //   master: "http://172.16.8.84:8080/sharedportal"
+        // master: "http://172.16.8.69:8080/sharedportal"
+         // master: "http://192.168.13.73:8080/sharaportal"
        // master: "http://localhost:8001/server"
-        master: location.protocol + '//' + location.host + '/sharaportal' // release
+        master: location.protocol + '//' + location.host + '/sharedportal' // release
       }
     })(window);
 
