--- a/sources/subject/view.html
+++ b/sources/subject/view.html
@@ -7,32 +7,33 @@
               <dt class="ui-link" >&nbsp;&nbsp;{{subitem.name}} >&nbsp;&nbsp;&nbsp;</dt>
               <dd>
                  <span v-for='ssubitem in subitem.children'>
-                  <span v-if='ssubitem.url'>
-                   <a  class="texta" target="_blank" @click="showLink(ssubitem,$event)" > | {{ssubitem.name}}</a>
+                  <span v-if='ssubitem.url'  :class="{ active: (current_item === ssubitem) }"   @click="Boxhide">
+                   <a  class="texta" target="_blank" v-bind:title="ssubitem.name" @click="showLink(ssubitem,$event)" > | {{ssubitem.name}}</a>
                   </span>
-                  <span v-else>
-                   <a :class="[{add: isadd,textaDep:istextaDep}]" :pid="ssubitem.id" @click="handleClick(ssubitem.id)"> | {{ssubitem.name}}</a class="textaDep">
+                  <span v-else :class="{ active: (current_item === ssubitem) }">
+                   <a  :class="{textaDep:istextaDep}" :pid="ssubitem.id" @click="handleClick(ssubitem,ssubitem.id)"> | {{ssubitem.name}}</a>
                   </span>
                 </span>
               </dd>
             </dl>
           </dl>
           <div v-for='item in data1'>
-            <div v-show="activeName =='常规应用'"  class="div_dep"><a   @click="showLink(item,$event)" target="_blank">|&nbsp;&nbsp;{{ item.name }}</a></div>
+            <div v-show="activeName =='常规应用'"  class="div_dep Box">
+              <a  :class="{ active: (current_item === item) }"  @click="showLink(item,$event)" target="_blank">|&nbsp;&nbsp;{{ item.name }}</a>
+            </div>
           </div>
-
           <!--工具简介-->
           <div class="tool-details" v-show="showLinkDom" >
             <h3>工具简介</h3>
             <el-row>
-              <el-col :span="4"><div class="grid-content"><img class="logo" src="../assets/header/logo.png"></div></el-col>
+              <el-col :span="4"><div class="grid-content tool-ico"><img class="logo" src="../assets/cd-logo.png"></div></el-col>
               <el-col :span="8"><div class="grid-content">
                 <div class="info-item"><label>工具名称：</label>{{current_item.name}}</div>
-                <div class="info-item"><label>工具类型：</label></div>
-                <div class="info-item"><label>访问次数：</label></div>
+                <div class="info-item"><label>工具类型：</label>{{current_item.appCategoryName}}</div>
+                <div class="info-item"><label>访问次数：</label>{{current_item.visitCount}}</div>
               </div></el-col>
               <el-col :span="8"><div class="grid-content">
-                <div class="info-item"><label>创建时间：</label> </div>
+                <div class="info-item"><label>创建时间：</label>{{current_item.creatTime}} </div>
               </div></el-col>
               <el-col :span="4"><div class="grid-content">
                 <a class="item-link el-button el-button--primary" :href="current_item.url" target="_blank"><i class="fa fa-link"></i>&nbsp;访问链接</a>
