--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -153,7 +153,7 @@
               <img src="../../../assets/ico/new.png">
               <div class="pull-left" style="width: 89%;">
                 <h5 class="dem-head over_space" style="width: 100%" v-bind:title="item.policy_title">{{item.title}}</h5>
-                <div class="dem-des"><span class="time">{{item.publish_date}}</span><span>作者：<em class="autor">{{item.author_name}}</em></span><span>来源：<em class="source">{{item.dept_short_name}}</em></span></div>
+                <div class="dem-des"><span class="time">{{item.publish_date}}</span><span>作者：<em class="autor">{{item.author_name}}</em></span>{{item.dept_short_name}}</em></span></div>
               </div>
             </router-link>
           </li>
