update api of gov catalog

--- a/sources/catalog/economy-resources/view.html
+++ b/sources/catalog/economy-resources/view.html
@@ -2,8 +2,8 @@
 	<div class="catalog-content">
 		<div class="head-desc">
 			<div class="title">{{head_title}}</div>
-			<div class="other-info"> {{itemCount}} 个系统
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}} 个资源</div>
+			<div class="other-info"> {{totalResource}} 个系统
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{itemCount}} 个资源</div>
 		</div>
 		<div class="search-box">
 			<div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
