--- a/sources/login/view.html
+++ b/sources/login/view.html
@@ -1,4 +1,4 @@
-<main id="login">
+<main id="login" @keyup.enter="keydownLogin($event)">
   <header>
     <section class="top_conttitle">
       <img class="logopng" src="../assets/login/logo.png">
