--- a/sources/interaction/container/policyDetail/view.html
+++ b/sources/interaction/container/policyDetail/view.html
@@ -6,10 +6,9 @@
   <div class="article">
     <h3 class="title">{{latestPolicyItem.title}}</h3>
     <div class="item_des">
-      <!-- <span>来源：<em  class="source">{{latestPolicyItem.dept_short_name}}</em></span> -->
-      <span>作者：<em class="author">{{latestPolicyItem.author_name}}</em></span>
+      <span v-if="latestPolicyItem.dept_short_name">来源：<em>{{latestPolicyItem.dept_short_name}}</em></span>
+      <span v-if="latestPolicyItem.author_name">作者：<em>{{latestPolicyItem.author_name}}</em></span>
     </div>
     <div class="policy_content" v-html="latestPolicyItem.content"></div>
   </div>
 </main>
- 
