细节调整和BUG #46392

--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -56,7 +56,7 @@
             <div class="left">
               <template>
                 <el-carousel :interval="5000" arrow="always">
-                  <el-carousel-item v-for="picNew in carouselPicNews" :key="picNew">
+                  <el-carousel-item v-for="picNew in carouselPicNews" :key="picNew.id">
                     <a class="img-list" href="javascript:void(0)" @click="getCarouselDetail(picNew)">
                       <img v-bind:src="picNew.picUrl" alt="新闻图" height="460" width="100%">
                        <span class="img-info">{{picNew.title}}</span>
