--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -16,7 +16,7 @@
               <el-table-column label="所属部门" width="180">
                 <template scope="scope">
                   <div class="over_space">
-                    <span v-bind:title="scope.row.ORG_NAME">{{scope.row.ORG_NAME}}</span>
+                    <span v-bind:title="scope.row.dept_name">{{scope.row.dept_name}}</span>
                   </div>
                 </template>
               </el-table-column>
