--- a/sources/login/view.html
+++ b/sources/login/view.html
@@ -1,8 +1,10 @@
 <main id="login" @keyup.enter="keydownLogin($event)">
   <header>
     <section class="top_conttitle">
+       <router-link to="/layout/dashboard">
       <img class="logopng" src="../assets/login/logo.png">
       <p>成都市大数据资源服务网</p>
+       </router-link>
       <div class="righttext">
       </div>
       <div class="section_bottom">
