--- a/sources/catalog/resources/view.html
+++ b/sources/catalog/resources/view.html
@@ -10,14 +10,31 @@
 		<div class="search-box">
 			<div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
 			<div class="search-input">
+
 				<el-input placeholder="请输入" v-model="keyword">
 				<el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
 				</el-input>
 			</div>
+		<div class="filters">
+			<div class="checkbox checkbox-primary" >  
+			    <input type="checkbox" id="opened" v-model="open_status" @click="toggleOpenStatus()">  
+			    <label for="opened">  
+			        开放
+			    </label>  
+			  </div> 
+			  <div class="checkbox checkbox-primary" >  
+			    <input type="checkbox" id="shared" v-model="share_status" @click="toggleShareStatus()">  
+			    <label for="shared">  
+			        共享 
+			    </label>  
+			  </div> 
+		</div>
 		</div>
 		<div v-show="showTable"><el-table :data="tableData"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty"
 		highlight-current-row   @current-change="handleCurrentChange" >
 		<el-table-column prop="dataset_name" label="信息资源名称" width="36%"></el-table-column>
+		<el-table-column prop="share_type" label="共享类型"	width="24%"></el-table-column>
+		<el-table-column prop="is_open" label="开放类型"	width="24%"></el-table-column>
 		<el-table-column prop="dept_name" label="相关部门"	width="24%"></el-table-column>
 		<el-table-column label="所属目录" width="20%">
 		<template scope="scope">
