--- a/sources/catalog/system-dynamic-details/view.html
+++ b/sources/catalog/system-dynamic-details/view.html
@@ -39,7 +39,32 @@
         <el-table-column prop="column_desc" label="中文描述"	width="50%"></el-table-column>
         </el-table>
 			</el-tab-pane>
-			<el-tab-pane label="接口说明" name="interfaceinfo">接口说明</el-tab-pane>
+			<el-tab-pane label="接口说明" name="interfaceinfo">
+		<p v-show="tableInterfaces.length == 0">暂无接口说明</p>
+				 <div v-show="tableInterfaces.length > 0"><el-table
+				    :data="tableInterfaces"
+				    style="width: 100%">
+				    <el-table-column type="expand">
+				      <template scope="props">
+				        <el-form label-position="left"  class="demo-table-expand">
+				          <el-form-item label="使用说明">
+				            <span>{{ props.row.operation_desc }}</span>
+				          </el-form-item>
+				          <el-form-item label="字段说明">
+				            <span>{{ props.row.request_info }}</span>
+				          </el-form-item>
+				        </el-form>
+				      </template>
+				    </el-table-column>
+				    <el-table-column
+				      label="接口列表"
+				      prop="service_url">
+				      <template scope="props">
+				      	{{ props.row.service_url }}
+				      </template>
+				    </el-table-column>
+				  </el-table></div></el-tab-pane>
+
 			</el-tabs>
 		</div>
 	</div>
